external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_invalid.move:5:9
  │
4 │         let r1 = &mut x;
  │                  ------ It is still being mutably borrowed by this reference
5 │         copy x;
  │         ^^^^^^ Invalid copy of variable 'x'
